# elucidating-featurenorm-ijepa

./: .gitignore  README.md  download_dataset.py  main.py  main_conf.py  pyproject.toml  train.py  validate.py
conf/: large.yaml  micro.yaml  mini.yaml  small.yaml
src/: dataset.py  kmeans.py  lidar.py  model.py  ops.py  packer.py  tome.py  trainer.py  transformer_blocks.py  utils.py  validate.py  validate_monocular_depth.py  visualize_embeddings.py
src/eval/: make_viz.py  plot_mean_loss.py  plot_sample_losses.py  utils.py  visualize_embeddings.py
src/scripts/: make_viz.py  plot_sample_losses.py  visualize_embeddings.py
src/tests/: test_dataset.py  test_main.py  test_model.py  test_ops.py  test_packer.py
temp.zarr/: zarr.json
