[project]
name = "ijepa-tanh"
version = "0.1.0"
description = "Elucidating the role of feature normalization in IJEPA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "diffmoe",
    "einx>=0.3.0",
    "jsonargparse[signatures]>=4.38.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pillow-simd>=9.5.0.post2",
    "tensorset==0.4.5",
    "torch>=2.7.0",
    "torch-pca>=1.1.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "wandb[media]>=0.19.10",
    "webdataset>=0.2.111",
]

[dependency-groups]
dev = [
    "bpython>=0.25",
]

[tool.uv.sources]
diffmoe = { git = "https://github.com/theAdamColton/diffmoe.git", rev = "faf2b49ff5ba8ea64292f712f443016a5692ff70" }
